@@ -1,8 +1,6 @@
 use Cache::Bounded;
-use Test;
+use Test::Simple tests => 2500;
 use strict;
-
-BEGIN { plan tests => 2500 }; 
 
 my $cache = new Cache::Bounded;
 
